--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,7 @@ jobs:
     - name: npm install, build, and test
       run: |
         npm i
+        echo 'cybervattam.com' > dist/CNAME
       env:
         CI: true
     - name: Deploy
